samples/_failures_safe/1761002380_0ee440_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_327d0375.c: In function ‘main’:
./samples/SAFE/__tmp_327d0375.c:169:25: error: expected expression at end of input
  169 |                         printf("%s %s\n",
      |                         ^~~~~~
./samples/SAFE/__tmp_327d0375.c:169:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_327d0375.c:169:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_327d0375.c:169:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_327d0375.c:169:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_327d0375.c:169:25: error: expected declaration or statement at end of input
